# POM2

./: .gitignore  AiControlServer.cpp  AiControlServer.h  Apple2Display.cpp  Apple2Display.h  AtaBlockDevice.cpp  AtaBlockDevice.h  AudioDevice.cpp  AudioDevice.h  Ay3_8910.h  Block512Backing.cpp  Block512Backing.h  CHANGELOG.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  CassetteDeck_ImGui.cpp  CassetteDeck_ImGui.h  CassetteDevice.cpp  CassetteDevice.h  CffaCard.cpp  CffaCard.h  CharRomCatalog.cpp  CharRomCatalog.h  CliDispatcher.cpp  CliDispatcher.h  CliRunner.cpp  ClockCard.cpp  ClockCard.h  DEV.md  Disassembler6502.cpp  Disassembler6502.h  Disk35Controller_ImGui.cpp  Disk35Controller_ImGui.h  Disk35Image.cpp  Disk35Image.h  DiskController_ImGui.cpp  (+105 more)
Testing/Temporary/: CTestCostData.txt
build_wasm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  POM2.data  POM2.html  POM2.js  POM2.wasm  cmake_install.cmake
disks/: A View to a Kill (1985)(Mindscape)(II+)[64K].woz  A.E. (1982)(Brøderbund)(Side A)[48K].woz  A.E. (1982)(Brøderbund)(Side B)[48K].woz  Akalabeth - World of Doom (1980)(California Pacific Computer)[48K].woz  Alice in Wonderland (1985)(Windham Classics)(II+)(Side A)[64K].woz  Alice in Wonderland (1985)(Windham Classics)(II+)(Side B)[64K].woz  Alien Ambush (1981)(Micro Distributors)[48K].woz  Alien Munchies (1983)(Gentry Software)(II+)[48K].woz  Alien Typhoon (1981-03-20)(Brøderbund)[48K].woz  Alpine Encounter, The (1983)(Random House)(II+)(Side B)[48K].woz  Ancient Art of War at Sea, The (1988)(Brøderbund)(IIE)(Side B)[128K].woz  Ancient Art of War, The (1989)(Brøderbund)(IIE)(Side B)[re-release][128K].woz  Ankh (1983)(Datamost)[48K].woz  Apple Cider Spider (1983)(Sierra On-Line)[48K].woz  Apple Galaxian (1980)(Brøderbund)[48K].woz  Apple Galaxian (1980)(StarCraft)[48K].woz  Asteroid Field, The (1980)(Cavalier Computer)[48K].woz  Autobahn (1981)(Sirius Software)[48K].woz  Bad Dudes (1988)(Data East)(IIE)(Side B)[128K].woz  Barbarian.dsk  Battlezone (1983)(Atarisoft)[48K].woz  Below the Root (1984)(Windham Classics)(II+)(Side A)[48K].woz  Blade of Blackpoole, The (1982)(Sirius Software)(Side A)[48K].woz  Blade of Blackpoole, The (1982)(Sirius Software)(Side B)[48K].woz  Borg (1981)(Sirius Software)[48K].woz  Both Barrels (1980)(Sirius Software)[48K].woz  Bruce Lee (1984)(Datasoft)[48K].woz  Bug Attack (1981)(Cavalier Computer)(II-II+)[48K].woz  BurgerTime (1982)(Mattel)[48K].woz  Castle Wolfenstein (1984-06-19)(MUSE Software)[48K][re-release].woz  Caverns of Freitag, The (1982)(MUSE Software)(II+)[48K].woz  Championship Baseball (1986)(Activision)(II+)(Side A)[64K].woz  Conan (1984)(Datasoft)(Side B)[48K].woz  County Fair (1981)(Datamost)[48K].woz  Crossword Magic v4.0 (1985)(Mindscape)(US)(Math Puzzle Disk)[48K].woz  Cutthroats r23 (1984-08-09)(Infocom)(II+)[48K].woz  Dark Crystal, The (1982)(Sierra On-Line)(Disk 1 of 2 Side B)[48K][Hi-Res Adventure #6].woz  Dark Crystal, The (1982)(Sierra On-Line)(Disk 2 of 2 Side B)[48K][Hi-Res Adventure #6].woz  Dogfight II (1981)(Micro Lab)(II-II+)(US)[48K].woz  Drol (1983)(Brøderbund)[48K].woz  (+109 more)
disks/Impossible Mission II (woz-a-day collection)/: Impossible Mission II side A.woz  Impossible Mission II side B.woz
disks/Manhunter New York (woz-a-day collection)/: Manhunter New York disk 1B.woz  Manhunter New York disk 3A.woz  Manhunter New York disk 5B.woz  Manhunter New York disk 6B.woz
disks/dsk/: Apple DOS 3.2 Utility.d13  (+6 more)
disks2/: Copy II Plus v8.3.do  Rescue.do  Xevious (1984)(Mindscape)(II+)[64K].do
disks35/: MesImages.2mg  The Oregon Trail 800K.woz  TheBestGames.2mg
disks_3.5/: Multiscribe(ADV).2mg
docs/: graphics_modes_comparison.md  oe_gpu_cpu_parity.md  video_parity_audit_2026-05-30.md  video_parity_revalidation_2026-05-30.md
floppyemu/: A2DeskTop-1.5-en_800k.2mg  Best1a.nib  Graphics Master.woz  README.txt
fpga/: CLAUDE.md
hdv/: AppleWorks_AW.hdv  Copy II Plus v9.1.2mg  Nox Archaist Lord of Storms HDV (v137).hdv
packaging/: POM2.desktop  roms_README.txt
prodos_disk/: README.txt
roms/: apple2e_char_de.rom  apple2e_char_de_improved.rom  apple2e_char_fr.rom  apple2e_char_uk_unenh.rom  diskii_p6.rom
scripts/: permute_p6_rom.py
src/: AiControlServer.cpp  AiControlServer.h  Apple2Display.cpp  Apple2Display.h  Apple2VideoDecode.h  AppleWinNtsc.cpp  AppleWinNtsc.h  AtaBlockDevice.cpp  AtaBlockDevice.h  AudioDevice.cpp  AudioDevice.h  Ay3_8910.h  Block512Backing.cpp  Block512Backing.h  ByteIO.h  CassetteDeck_ImGui.cpp  CassetteDeck_ImGui.h  CassetteDevice.cpp  CassetteDevice.h  CffaCard.cpp  CffaCard.h  CharRomCatalog.cpp  CharRomCatalog.h  CliDispatcher.cpp  CliDispatcher.h  CliRunner.cpp  ClockCard.cpp  ClockCard.h  CpuClock.h  CrtEffectStack.cpp  CrtEffectStack.h  Disassembler6502.cpp  Disassembler6502.h  Disk35Controller_ImGui.cpp  Disk35Controller_ImGui.h  Disk35Image.cpp  Disk35Image.h  DiskController_ImGui.cpp  DiskController_ImGui.h  DiskIICard.cpp  (+125 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  ai_control_server_smoke_test.cpp  applewin_ntsc_smoke_test.cpp  artifact_phase_probe.cpp  ata_block_device_test.cpp  audio_mixer_smoke_test.cpp  beam_race_composite_test.cpp  c2plus_boot_probe  c2plus_boot_probe.cpp  cassette_wav_tail_smoke_test.cpp  cffa_boot_dump.cpp  cffa_card_smoke_test.cpp  char_rom_test.cpp  choplifter_iie_trace.cpp  cli_kiosk_test.cpp  clock_card_smoke_test.cpp  cmake_install.cmake  cmos_6502_smoke_test.cpp  copy2plus_boot_dump  copy2plus_boot_dump.cpp  cpu_cycle_count_test.cpp  cpu_smoke.cpp  crt_barrel_view.cpp  d13_roundtrip_smoke_test.cpp  dhgr_phase_signal_test.cpp  dhgr_render_smoke_test.cpp  disasm_cmos_test.cpp  disasm_smoke.cpp  disk_2mg_smoke_test.cpp  disk_2mg_writeback_smoke_test.cpp  disk_boot_smoke_test.cpp  disk_cnib2_smoke_test.cpp  disk_drive2_smoke_test.cpp  disk_image_smoke_test.cpp  disk_macbinary_smoke_test.cpp  disk_refuse_smoke_test.cpp  disk_skew_sniff_smoke_test.cpp  disk_wp_test.cpp  (+195 more)
wasm/: POM2.js  POM2.wasm  index.html  serve.py  shell.html
web/: shell.html
(+537 files in other folders)
